--- a/accounts/templates/auth/signin.html
+++ b/accounts/templates/auth/signin.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="{%static  'academic/assets/img/favicon.png' %}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>
-        Sign up | KCCEMSR
+        Sign in | KCCEMSR
     </title>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
     <link rel="stylesheet" type="text/css"
@@ -18,60 +18,32 @@
     <link href="{%static 'academic/assets/css/material-dashboard.css' %}" rel="stylesheet" />
 </head>
 
-
 <body style="overflow: hidden;">
     <div class="wrapper">
 
         <div class="row justify-content-center">
-            <div class="col-md-5">
-                <div class="card" style="margin-top: 100px;">
-                    <div class="card-header card-header-rose card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">contacts</i>
+            <div class="col-md-6">
+                <div class="card " style="margin-top:50px">
+                    <div class="card-header card-header-rose card-header-text">
+                        <div class="card-text">
+                            <h4 class="card-title">SignIn</h4>
                         </div>
-                        <h4 class="card-title">Sign In</h4>
                     </div>
-                    <form class="form-horizontal">
-                        <div class="card-body ">
-
+                    <div class="card-body ">
+                        <form method="post" enctype="multipart/form-data"> {% csrf_token %}
+                            {% for field in form %}
                             <div class="row">
-                                <label class="col-md-3 col-form-label">Email</label>
-                                <div class="col-md-9">
-                                    <div class="form-group has-default bmd-form-group">
-                                        <input type="email" class="form-control">
-                                    </div>
-                                </div>
+                              <div class="col-md-6">
+                                <label class="my_class" for="{{ field.name }}">{{ field.label }}</label>
+                                {{ field }}
+                              </div>
                             </div>
-                            <div class="row">
-                                <label class="col-md-3 col-form-label">Password</label>
-                                <div class="col-md-9">
-                                    <div class="form-group bmd-form-group">
-                                        <input type="password" class="form-control">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-md-3"></label>
-                                <div class="col-md-9">
-                                    <div class="form-check">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" value=""> Remember me
-                                            <span class="form-check-sign">
-                                                <span class="check"></span>
-                                            </span>
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer ">
-                            <div class="row">
-                                <div class="col-md-9">
-                                    <button type="submit" class="btn btn-fill btn-rose">Sign in</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
+                            {% endfor %}
+                            <button type="submit" class="btn btn-primary pull-left">
+                              Submit
+                            </button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
