--- a/academic/templates/siderbar.html
+++ b/academic/templates/siderbar.html
@@ -24,7 +24,7 @@ assets/img/sidebar-4.jpg' %}"
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'academic:noticelist' %}">
+        <a class="nav-link" href="{% url 'notice:noticelist' %}">
           <i class="material-icons">volume_up</i>
           <p>Notices</p>
         </a>
