some changes made

--- a/accounts/templates/main/payment.html
+++ b/accounts/templates/main/payment.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="content">
     <div class="container-fluid">
@@ -77,5 +77,5 @@
     </div>
 </div>
 
-{% endblock %} -->
+{% endblock %}
 
